- popover unit: fix width, and use filter to format units - ES Market: allow to buy a market record on small device - fix #216 - ES Market: fix price conversion and price display unit

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -157,9 +157,6 @@
     background-color: #f5f5f5;
 }
 
-#unitPopover {
-  height: 108px;
-}
 
 .no-margin {
   margin: 0 !important;
